syntax = "proto3";

                 package gossipMenuOption;
service GossipMenuOptionService {
 rpc createGossipMenuOption (GossipMenuOptionCreateInput) returns (GossipMenuOption) {}
rpc gossipMenuOptions (findManyParams) returns (stream GossipMenuOption) {}
rpc gossipMenuOption (GossipMenuOptionWhereUniqueInput) returns (GossipMenuOption) {}
rpc updateGossipMenuOption (GossipMenuOptionUpdateInput) returns (GossipMenuOption) {}
rpc deleteGossipMenuOption (GossipMenuOptionWhereUniqueInput) returns (GossipMenuOption) {} 
 }
message GossipMenuOptionCreateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message GossipMenuOption {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message GossipMenuOptionWhereUniqueInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message GossipMenuOptionUpdateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message findManyParams {

};